<resources>
    <string name="key_statistics">Key Stats</string>
    <string name="price_info">Price Info</string>
    <string name="charts">Charts</string>
    <string name="android_web_agent">ANDROID_AGENT_NATIVE/2.0&#8194;%1$s</string>
    <string name="long_click_pic">Do you want to download pictures?</string>
    <string name="server_client_id">100766575827-4dli86c3bavsb82bosudt0hp4cpmv3vn.apps.googleusercontent.com</string>
    <string name="facebook_app_id">1153506821775203</string>
    <string name="fb_login_protocol_scheme">fb1153506821775203</string>
    <string name="app_name">Optional Profit</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="setting">Setting</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="done">Done</string>
    <string name="confirm">Confirm</string>
    <string name="retry">Retry</string>
    <string name="exit">Exit</string>
    <string name="manual_mode">Manual Mode</string>
    <string name="version">Version #version#</string>
    <string name="skip">Skip</string>
    <string name="back">Back</string>
    <string name="location">Location</string>
    <string name="remark">Remark</string>
    <string name="downloading">Downloading...</string>
    <string name="ifta_create_title">Fueling</string>
    <string name="ifta_detail_title">Fuel Detail</string>
    <string name="ifta_edit_title">Fuel Edit</string>
    <string name="ifta_update_driver_name">Driver Name</string>
    <string name="ifta_update_driver_name_hit">Driver Name</string>
    <string name="ifta_update_vehicle_id">Vehicle ID</string>
    <string name="ifta_update_vehicle_id_hint">Vehicle ID</string>
    <string name="ifta_update_purchase_date">Purchase Date</string>
    <string name="ifta_update_purchase_date_hint">Purchase Date</string>
    <string name="ifta_update_state">State</string>
    <string name="ifta_update_state_hint">State</string>
    <string name="ifta_update_fuel_type">Fuel Type</string>
    <string name="ifta_update_fuel_type_hint">Select the fuel type</string>
    <string name="ifta_update_unit_price">Unit Price</string>
    <string name="ifta_update_unit_price_hint">Unit Price</string>
    <string name="ifta_update_purchased_gallonst">Purchased Gallons</string>
    <string name="ifta_update_purchased_gallonst_hint">Purchased Gallons</string>
    <string name="ifta_update_total_price">Total Price</string>
    <string name="ifta_update_total_price_hint">Total Price</string>
    <string name="ifta_update_receipt">Receipt</string>
    <string name="ifta_fuel_type_title">Fuel Type</string>
    <string name="ifta_vehicle_title">Select Vehicle</string>
    <string name="ifta_state_title">Choose State</string>
    <string name="ifta_delete_tip">Are you sure to delete it?</string>
    <string name="ifta_delete_offline">The delete function can\'t be used in offline mode. Please try again after restoring the network.</string>
    <string name="version_install_apk">There\'s a new version of SHIELD available. Update now to get the latest features and improvements.</string>
    <string name="version_install_apk_force">We have upgraded the main features and updated them to ensure full functionality.</string>
    <string name="version_download_failed">Download failed, Please check the network and try again.</string>
    <string name="unidentified_page_title">Unidentified Driver Log</string>
    <string name="permission_tips">Please allow App to access all permissions.</string>
    <string name="location_service_tip">Please open location service.</string>
    <string name="dialog_prompt_success">Success</string>
    <string name="dialog_prompt_failed">Failed</string>
    <string name="dialog_loading_save">Saving</string>
    <string name="dialog_loading_loading">Loading</string>
    <string name="dialog_progress_download">DownLoad</string>
    <string name="dialog_post_trip_off_tip">Off Duty from the work. Have a great day! The estimated available driving time for your next day is #hour# h #minute# m.</string>
    <string name="dialog_driving_count_down_yes">Yes(#number#)</string>
    <string name="dialog_driving_count_down_tip">Your vehicle is as Stationary for more than 5 min, do you want to change the status to On Duty Not Driving?</string>
    <string name="dialog_personal_use_tip">Do you want to continue using the Personal Use status?</string>
    <string name="dialog_yard_move_tip">Vehicle restart, switch status from Yard Move to On Duty Not Driving.</string>
    <string name="dialog_update_tip">Update #version_code# is available to download. Downloading the latest update you will get the latest features and improvements of SHIELD.</string>
    <string name="tab_menu_item_dashboard">DASHBOARD</string>
    <string name="tab_menu_item_dailylog">DAILY LOG</string>
    <string name="tab_menu_item_dvir">DVIR</string>
    <string name="tab_menu_item_dot">DOT</string>
    <string name="tab_menu_item_more">MORE</string>
    <string name="tab_menu_dot_item_review">START REVIEW</string>
    <string name="tab_menu_dot_item_send">SEND LOGS</string>
    <string name="daily_log_top_tab_menu_item_log">Log</string>
    <string name="daily_log_top_tab_menu_item_profile">Header</string>
    <string name="daily_log_top_tab_menu_item_sign">Sign</string>
    <string name="title_dailylog">Daily Log</string>
    <string name="title_dvir">DVIR</string>
    <string name="title_dot">Roadside Inspection</string>
    <string name="title_dot_inside">Roadside Inspection</string>
    <string name="dot_exit">Exit</string>
    <string name="title_more">More</string>
    <string name="login_welcome">WELCOME</string>
    <string name="login_carrier_hint">Carrier\'s DOT#</string>
    <string name="login_driver">Driver ID</string>
    <string name="login_password">Password</string>
    <string name="login_btn">Login</string>
    <string name="login_again">Your session has expired, please login again.</string>
    <string name="login_info_error">Your login info error,please login again.</string>
    <string name="login_account_tip">Don’t have a SHIELD yet?</string>
    <string name="login_trial_account_tip">Request a Free Trial Account</string>
    <string name="login_phone_number">202-800-6565</string>
    <string name="login_account_url">https://www.ubtshield.com/demo/</string>
    <string name="welcome_tip">HAVE A SAFE TRIP!</string>
    <string name="welcome_carrier_name">(#carrierName#)</string>
    <string name="welcome_confirm_btn">Thank you! Start the trip.</string>
    <string name="welcome_reject_btn">Not me</string>
    <string name="exemption_tip">We detected that your account is in exemption mode. Please select exemption types.</string>
    <string name="exemption_miles_btn">100 Air Mile Exemption</string>
    <string name="exemption_days_btn">Drive less than 8 days in rolling 30 days period</string>
    <string name="prepare_text">Operating a commercial motor vehicle while tired, ill, or in any condition unsuitable for driving is forbidden per federal law (49 CFR § 392.3). Keep the road safe by making sure that you are well-rested and in good health before driving.</string>
    <string name="prepare_failure">CONNECT FAILED</string>
    <string name="prepare_failure_tip">Your network seems to have a\n problem, Please try again.</string>
    <string name="prepare_try_btn">Try Again</string>
    <string name="bluetooth_open_tip">Turn on Bluetooth to connect the vehicle.</string>
    <string name="vehicle_connect_dialog_title">Connecting to #vehicle#</string>
    <string name="vehicle_connect_dialog_text">Make sure you select the correct vehicle.</string>
    <string name="vehicle_connect_dialog_failed_title">Connection failed.</string>
    <string name="vehicle_connect_dialog_failed_text">You can try again or keep working by enabling Manual Mode.</string>
    <string name="disconnect_vehicle_tip">Do you want to disconnect from vehicle?</string>
    <string name="disconnect_vehicle_neutral_btn">No, I don\'t need it</string>
    <string name="disconnect_vehicle_negative_btn">Disconnect from vehicle</string>
    <string name="ddl_unknown">Unknown Log</string>
    <string name="ddl_off_duty">Off Duty</string>
    <string name="ddl_sleeper_berth">Sleeper Berth</string>
    <string name="ddl_driving">Driving</string>
    <string name="ddl_on_duty_not_driving">On Duty Not Driving</string>
    <string name="ddl_yard_move">Yard Move</string>
    <string name="ddl_personal_use">Personal Use</string>
    <string name="ddl_clear_special">Status Cleared</string>
    <string name="ddl_login">Log In</string>
    <string name="ddl_log_out">Log Out</string>
    <string name="ddl_engine_on">Power Up</string>
    <string name="ddl_engine_off">Shut Down</string>
    <string name="ddl_sign">Cert</string>
    <string name="ddl_login_dot">Log In</string>
    <string name="ddl_log_out_dot">Log Out</string>
    <string name="ddl_engine_on_dot">Power Up</string>
    <string name="ddl_engine_off_dot">Shut Down</string>
    <string name="ddl_sign_dot">Cert</string>
    <string name="ddl_adverse_driving">Adverse Driving</string>
    <string name="ddl_adverse_driving_dot">Adverse Driving</string>
    <string name="ddl_intermediate">Intermediate</string>
    <string name="ddl_intermediate_dot">Intermediate</string>
    <string name="ddl_rule_change_usa_70hours">Change to USA 70 hour / 8 day</string>
    <string name="ddl_rule_change_usa_70hours_dot">Change to USA 70 hour / 8 day</string>
    <string name="ddl_rule_change_usa_60hours">Change to USA 60 hour / 7 day</string>
    <string name="ddl_rule_change_usa_60hours_dot">Change to USA 60 hour / 7 day</string>
    <string name="ddl_rule_change_canada_70hours">Change to Canada 70 hour / 7 day</string>
    <string name="ddl_rule_change_canada_70hours_dot">Change to Canada 70 hour / 7 day</string>
    <string name="ddl_rule_change_canada_120hours">Change to Canada 120 hour / 14 day</string>
    <string name="ddl_rule_change_canada_120hours_dot">Change to Canada 120 hour / 14 day</string>
    <string name="ddl_diag_log_p">Power Malfunction(P) Detected</string>
    <string name="ddl_diag_log_p_c">Power Malfunction(P) Cleared</string>
    <string name="ddl_diag_log_e">Engine Sync Mal.(E) Detected</string>
    <string name="ddl_diag_log_e_c">Engine Sync Mal.(E) Cleared</string>
    <string name="ddl_diag_log_t">Time Malfunction(T) Detected</string>
    <string name="ddl_diag_log_t_c">Time Malfunction(T) Cleared</string>
    <string name="ddl_diag_log_l">Position Malfunction(L) Detected</string>
    <string name="ddl_diag_log_l_c">Position Malfunction(L) Cleared</string>
    <string name="ddl_diag_log_r">Data Rec. Malfunction(R) Detected</string>
    <string name="ddl_diag_log_r_c">Data Rec. Malfunction(R) Cleared</string>
    <string name="ddl_diag_log_s">Data Trans Malfunction(S) Detected</string>
    <string name="ddl_diag_log_s_c">Data Trans Malfunction(S) Cleared</string>
    <string name="ddl_diag_log_o">Other Malfunction(O) Detected</string>
    <string name="ddl_diag_log_o_c">Other Malfunction(O) Cleared</string>
    <string name="ddl_diag_log_1">Power Diagnostic(1) Detected</string>
    <string name="ddl_diag_log_1_c">Power Diagnostic(1) Cleared</string>
    <string name="ddl_diag_log_2">Engine Sync Diag(2) Detected</string>
    <string name="vehicle_empty">Vehicle ID can\'t be empty.</string>
    <string name="ifta_state_empty">State can\'t be empty.</string>
    <string name="ifta_fuel_empty">Fuel Type can\'t be empty.</string>
    <string name="ifta_unit_price_empty">Unit Price can\'t be empty.</string>
    <string name="ifta_gallons_empty">Gallons can\'t be empty.</string>
    <string name="ifta_total_price">The total price no more than $1000.</string>
</resources>