<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:eld="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/tab_menu_height"
    android:background="@drawable/tab_menu_bg"
    android:orientation="horizontal">

    <com.unitedbustech.calculator.view.TopTabMenuItem
        android:id="@+id/dailylog_log"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        eld:itemText="@string/daily_log_top_tab_menu_item_log"
        eld:itemTextColors="@drawable/tab_menu_text" />

    <View
        android:layout_width="0.1dp"
        android:layout_height="match_parent"
        android:background="@color/split_line"/>

    <com.unitedbustech.calculator.view.TopTabMenuItem
        android:id="@+id/dailylog_profile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        eld:itemText="@string/daily_log_top_tab_menu_item_profile"
        eld:itemTextColors="@drawable/tab_menu_text" />

    <View
        android:layout_width="0.1dp"
        android:layout_height="match_parent"
        android:background="@color/split_line"/>

    <com.unitedbustech.calculator.view.TopTabMenuItem
        android:id="@+id/dailylog_sign"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        eld:itemText="@string/daily_log_top_tab_menu_item_sign"
        eld:itemTextColors="@drawable/tab_menu_text" />

</LinearLayout>